# native-cli-ai

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/rules/: project-docs.mdc  rust-cli-conventions.mdc  rust-native-architecture.mdc
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  approval_prompt.rs  main.rs  prompt.rs  repl.rs  runner.rs  runtime_tooling.rs  stream.rs
crates/cli/src/render/: diff.rs  markdown.rs  mod.rs  status.rs
crates/cli/tests/: cli_commands.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  event.rs  lib.rs  message.rs  orchestration.rs  session.rs  tool.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  approval.rs  code_intel.rs  cost.rs  harness.rs  hooks.rs  lib.rs  provider.rs  skills.rs
crates/core/src/provider/: anthropic.rs  anthropic_compat.rs  factory.rs  minimax.rs  openai.rs  openai_compat.rs  openrouter.rs  test_support.rs
crates/core/src/tools/: apply_patch.rs  bash.rs  code_intel_tool.rs  copy_path.rs  create_directory.rs  delete_path.rs  edit_file.rs  fetch_url.rs  filesystem.rs  git.rs  list_directory.rs  mcp.rs  mod.rs  move_path.rs  rename_path.rs  run_validation.rs  search.rs  spawn_subagent.rs  types.rs  web_search.rs  write_file.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: app.rs  controller.rs  ingest.rs  ipc_client.rs  main.rs  session_index.rs  state.rs  workspaces.rs
crates/monitor/src/panels/: diff.rs  files.rs  log.rs  mod.rs  review.rs  sessions.rs  stats.rs  terminal.rs  timeline.rs  tools.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bash_tool.rs  ipc.rs  lib.rs  memory_store.rs  orchestrator_store.rs  process.rs  pty.rs  service.rs  session_store.rs  supervisor.rs  tmux.rs  workspace_registry.rs  worktree.rs
designs/: a1.html  a2.html  a3.html  b1.html  b2.html  b3.html  p1.html  p2.html  q1.html  q2.html
docs/: architecture.md  orchestration.md  prd.md  tech-stack.md  todo.md
template-design/: dashboar-detail.html  dashboard1.html
