[package]
name = "nca-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive TUI shell and CLI entrypoint for nca"

[[bin]]
name = "nca"
path = "src/main.rs"

[dependencies]
nca-common = { workspace = true }
nca-core = { workspace = true }
nca-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.30"
crossterm = "0.29"
reedline = "0.38"
syntect = "5"
pulldown-cmark = "0.12"
colored = "3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
similar = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
insta = "1"
