[package]
name = "nca-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, config schema, and event definitions for nca"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
