[package]
name = "nca-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent loop, provider abstraction, tool protocol, and approval policy"

[dependencies]
nca-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
genai = "0.5"
similar = "2"
globset = "0.4"
async-trait = "0.1"
scraper = "0.23"
futures-util = "0.3"
serde_yaml = "0.9.34"
mcpr = "0.2.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
