[package]
name = "nca-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PTY management, sandboxed process execution, IPC server, and session persistence"

[dependencies]
nca-common = { workspace = true }
nca-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
libc = "0.2"
portable-pty = "0.9"
ignore = "0.4"
walkdir = "2"
async-trait = "0.1"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
